# PredictCalorieExpenditure_cdv_DOVM

Calorie-Expenditure-Prediction/: .gitignore  README.md  pyproject.toml
Calorie-Expenditure-Prediction/config/: config.yaml
Calorie-Expenditure-Prediction/experiments/: comparison_summary.json
Calorie-Expenditure-Prediction/experiments/deep_dropout0.2_lr0.0005/: experiment_results.json  model_fold_1.pth  model_fold_2.pth  test_predictions.npy  training_results.json
Calorie-Expenditure-Prediction/experiments/deep_dropout0.2_lr0.001/: experiment_results.json  model_fold_1.pth  model_fold_2.pth  test_predictions.npy  training_results.json
Calorie-Expenditure-Prediction/experiments/deep_dropout0.2_lr0.002/: experiment_results.json  model_fold_1.pth  model_fold_2.pth  test_predictions.npy  training_results.json
Calorie-Expenditure-Prediction/experiments/deep_nodropout_lr0.0005/: experiment_results.json  model_fold_1.pth  model_fold_2.pth  test_predictions.npy  training_results.json
Calorie-Expenditure-Prediction/experiments/deep_nodropout_lr0.001/: experiment_results.json  model_fold_1.pth  model_fold_2.pth  test_predictions.npy  training_results.json
Calorie-Expenditure-Prediction/experiments/deep_nodropout_lr0.002/: experiment_results.json  model_fold_1.pth  model_fold_2.pth  test_predictions.npy  training_results.json
Calorie-Expenditure-Prediction/src/: __init__.py  architectures.py  data_analysis.py  kfold_trainer.py  model.py  model_comparison.py  predict.py  rmsle_loss.py  run_analysis.py  run_prediction.py  run_training.py  train.py  workout_dataset.py
(+34 files in other folders)
